--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -36,7 +36,8 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: build libcloudph++
-      uses: igfuw/libcloudphxx_build@v0.1-beta
+      #uses: igfuw/libcloudphxx_build@v0.1-beta
+      uses: ./.github/actions/libcloudphxx_build
       with:
         disable_cuda: ${{matrix.disable_cuda}}
         build_type: ${{matrix.build_type}}
