GA: add actions for testing

--- a/.github/actions/libcloudphxx_build/action.yml
+++ b/.github/actions/libcloudphxx_build/action.yml
@@ -46,7 +46,7 @@ runs:
     shell: bash
 #    if: steps.cache_singularity.outputs.cache-hit != 'true'
     run: |
-      [[ "${{steps.cache_singularity.outputs.cache-hit}}" != 'true' ]] &&
+      [[ "${{steps.cache_singularity.outputs.cache-hit}}" != "true" ]] &&
       mkdir '${{ github.workspace }}/singularity_images'
       singularity pull --disable-cache --dir '${{ github.workspace }}/singularity_images' library://pdziekan/default/uwlcm:ubuntu_20_04_cuda_11_4
       || true
