GA: add actions for testing

--- a/.github/actions/libcloudphxx_build/action.yml
+++ b/.github/actions/libcloudphxx_build/action.yml
@@ -45,12 +45,13 @@ runs:
   - name: Download UWLCM Singularity image
     shell: bash
 #    if: steps.cache_singularity.outputs.cache-hit != 'true'
-    run: [ "${{steps.cache_singularity.outputs.cache-hit}}" != "true" ] && \
+    run: |
+      [ "${{steps.cache_singularity.outputs.cache-hit}}" != "true" ] &&
       {
         mkdir '${{ github.workspace }}/singularity_images';
         singularity pull --disable-cache --dir '${{ github.workspace }}/singularity_images' library://pdziekan/default/uwlcm:ubuntu_20_04_cuda_11_4;
-      } \
-      || \
+      }
+      ||
       true
     # disable Singularity cache, we cache manually
 
