GA: add actions for testing

--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -111,12 +111,39 @@ jobs:
         build_type: ["Release"]
 
     steps:
+    - uses: actions/checkout@v2
 
-   # TODO: it is already done by the libcloudphxx_build action?
-   # - name: Set friendly Singularity image name
-   #   uses: allenevans/set-env@v2.0.0
-   #   with:
-   #     SI: '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_4.sif'
+# Singularity installation the same as in libcloudphxx_build action...
+    - name: Install Singularity
+      #when installed from this action, .SIF is always converted to sandbox (could be related to: https://githubmemory.com/repo/hpcng/singularity/issues/6065)
+      uses: eWaterCycle/setup-singularity@v6
+      with:
+        singularity-version: 3.7.1
+      #apt installation following https://sylabs.io/guides/3.0/user-guide/installation.html, but this is a too old version and uninstalls python-is-python3
+#      run: |
+#        wget -O- http://neuro.debian.net/lists/focal.de-fzj.libre | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list
+#        sudo apt-key adv --recv-keys --keyserver hkps://keyserver.ubuntu.com 0xA5D32F012649A5A9
+#        sudo apt-get update
+#        sudo apt-get install -y singularity-container
+            
+    - name: Cache UWLCM Singularity image
+      id: cache_singularity
+      uses: actions/cache@v2
+      with:
+        path: '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_4.sif'
+        key: 'sng_ubuntu_20_04_cuda_11_4'
+        
+    - name: Download UWLCM Singularity image
+      if: steps.cache_singularity.outputs.cache-hit != 'true'
+      run: |
+        mkdir '${{ github.workspace }}/singularity_images'
+        singularity pull --disable_cache --dir '${{ github.workspace }}/singularity_images' library://pdziekan/default/uwlcm:ubuntu_20_04_cuda_11_4
+      # disable Singularity cache, we cache manually
+
+    - name: Set friendly Singularity image name
+      uses: allenevans/set-env@v2.0.0
+      with:
+        SI: '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_4.sif'
 
     - name: Run unit tests
       working-directory: ${{github.workspace}}/build
@@ -124,27 +151,6 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: singularity exec $SI ctest -C ${{matrix.build_type}}
       
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
       
  #   - name: Run Singularity shell
  #     run: singularity shell '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_1_1.0.sif'
