--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -149,7 +149,11 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: singularity exec $SI ctest -C ${{matrix.build_type}}
+      run: |
+        pwd
+        ls
+        singularity exec $SI make test
+        singularity exec $SI ctest -C ${{matrix.build_type}}
       
       
  #   - name: Run Singularity shell
