--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -124,6 +124,12 @@ jobs:
       with:
         name: libcloud_build
 
+    - run: |
+      pwd
+      ls
+      echo ${{ github.workspace }}
+      ls ${{ github.workspace }}
+
 # Singularity installation the same as in libcloudphxx_build action...
     - name: Install Singularity
       #when installed from this action, .SIF is always converted to sandbox (could be related to: https://githubmemory.com/repo/hpcng/singularity/issues/6065)
