--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -128,12 +128,6 @@ jobs:
         name: libcloud_build
         path: ${{ github.workspace }}/build
 
-    - run: |
-        pwd
-        ls
-        echo ${{ github.workspace }}
-        ls ${{ github.workspace }}
-
 # Singularity installation the same as in libcloudphxx_build action...
     - name: Install Singularity
       #when installed from this action, .SIF is always converted to sandbox (could be related to: https://githubmemory.com/repo/hpcng/singularity/issues/6065)
@@ -171,10 +165,8 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
-        pwd
-        ls
-        singularity exec $SI make test
-        singularity exec $SI ctest -C ${{matrix.build_type}}
+        singularity exec $SI ctest -C ${{matrix.build_type}} || cat Testing/Temporary/LastTest.log / # "/" intentional! (just to make cat exit with an error code)
+        #singularity exec $SI make test
       
       
  #   - name: Run Singularity shell
