--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -111,8 +111,8 @@ jobs:
 #      # Build your program with the given configuration
 #      run: VERBOSE=1 singularity exec $SI cmake --build ${{github.workspace}}/build --config ${{matrix.build_type}} -j${{matrix.threads}}
 
-  # job test
-  test:
+  # test jobs
+  unit_test:
     needs: build
     runs-on: ubuntu-20.04
 
@@ -123,61 +123,49 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-#    - name: create the build directory
-#      run: mkdir ${{ github.workspace }}/build
-
     - name: Download libcloudph++ build
       uses: actions/download-artifact@v2
       with:
         name: libcloud_build_${{matrix.build_type}}_tar
-#        path: ${{ github.workspace }}/build
 
     - name: Decompress libcloudph++ build
-      run: |
-        tar -xvf build.tar
-        pwd
-        ls
-        ls build
+      run: tar -xvf build.tar
+
+    - name: load UWLCM Singularity image
+      #uses: igfuw/libcloudphxx_build@v0.1-beta
+      uses: ./.github/actions/load_UWLCM_singularity_image
+      with:
+        path: ${{ github.workspace }}/singularity_images
 
 # Singularity installation the same as in libcloudphxx_build action...
-    - name: Install Singularity
-      #when installed from this action, .SIF is always converted to sandbox (could be related to: https://githubmemory.com/repo/hpcng/singularity/issues/6065)
-      uses: eWaterCycle/setup-singularity@v6
-      with:
-        singularity-version: 3.7.1
-      #apt installation following https://sylabs.io/guides/3.0/user-guide/installation.html, but this is a too old version and uninstalls python-is-python3
+#    - name: Install Singularity
+#      #when installed from this action, .SIF is always converted to sandbox (could be related to: https://githubmemory.com/repo/hpcng/singularity/issues/6065)
+#      uses: eWaterCycle/setup-singularity@v6
+#      with:
+#        singularity-version: 3.7.1
+#            
+#    - name: Cache UWLCM Singularity image
+#      id: cache_singularity
+#      uses: actions/cache@v2
+#      with:
+#        path: '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_4.sif'
+#        key: 'sng_ubuntu_20_04_cuda_11_4'
+#        
+#    - name: Download UWLCM Singularity image
+#      if: steps.cache_singularity.outputs.cache-hit != 'true'
 #      run: |
-#        wget -O- http://neuro.debian.net/lists/focal.de-fzj.libre | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list
-#        sudo apt-key adv --recv-keys --keyserver hkps://keyserver.ubuntu.com 0xA5D32F012649A5A9
-#        sudo apt-get update
-#        sudo apt-get install -y singularity-container
-            
-    - name: Cache UWLCM Singularity image
-      id: cache_singularity
-      uses: actions/cache@v2
-      with:
-        path: '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_4.sif'
-        key: 'sng_ubuntu_20_04_cuda_11_4'
-        
-    - name: Download UWLCM Singularity image
-      if: steps.cache_singularity.outputs.cache-hit != 'true'
-      run: |
-        mkdir '${{ github.workspace }}/singularity_images'
-        singularity pull --disable_cache --dir '${{ github.workspace }}/singularity_images' library://pdziekan/default/uwlcm:ubuntu_20_04_cuda_11_4
-      # disable Singularity cache, we cache manually
-
-    - name: Set friendly Singularity image name
-      uses: allenevans/set-env@v2.0.0
-      with:
-        SI: '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_4.sif'
+#        mkdir '${{ github.workspace }}/singularity_images'
+#        singularity pull --disable_cache --dir '${{ github.workspace }}/singularity_images' library://pdziekan/default/uwlcm:ubuntu_20_04_cuda_11_4
+#
+#    - name: Set friendly Singularity image name
+#      uses: allenevans/set-env@v2.0.0
+#      with:
+#        SI: '${{ github.workspace }}/singularity_images/uwlcm_ubuntu_20_04_cuda_11_4.sif'
 
     - name: Run unit tests
       working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: |
-        singularity exec $SI ctest -C ${{matrix.build_type}} || cat Testing/Temporary/LastTest.log / # "/" intentional! (just to make cat exit with an error code)
-        #singularity exec $SI make test
+      run: OMP_NUM_THREADS=4 singularity exec $SI ctest -C ${{matrix.build_type}} || cat Testing/Temporary/LastTest.log / # "/" intentional! (just to make cat exit with an error code)
       
       
  #   - name: Run Singularity shell
