GA: add actions for testing

--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -130,7 +130,7 @@ jobs:
         path: ${{ github.workspace }}/singularity_images
 
     - name: Install libcloudph++
-      run: singularity exec $SI cmake --install build
+      run: sudo singularity exec $SI cmake --install build
 
     - name: Install python3-gnuplot
       run: |
